# tree-sitter-ql-dbscheme

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-dbscheme.h  tree-sitter-dbscheme.pc.in  tree-sitter-ql-dbscheme.h  tree-sitter-ql-dbscheme.pc.in  tree-sitter-ql_dbscheme.h  tree-sitter-ql_dbscheme.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dbscheme/: __init__.py  binding.c
bindings/python/tree_sitter_ql_dbscheme/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDbschemeTests/: TreeSitterDbschemeTests.swift  TreeSitterTestTests.swift
bindings/swift/TreeSitterQLDBSchemeTests/: TreeSitterQLDBSchemeTests.swift
bindings/swift/TreeSitterQlDbschemeTests/: TreeSitterQlDbschemeTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: dbscheme.txt
