[package]
name = "tree-sitter-ql-dbscheme"
description = "ql dbscheme grammar for the tree-sitter parsing library"
version = "0.0.2"
keywords = ["incremental", "parsing", "ql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-ql-dbscheme"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.22.5"

[build-dependencies]
cc = "1.0"
